--- a/projectC/templates/live.html
+++ b/projectC/templates/live.html
@@ -71,6 +71,8 @@
                 </div>
                 <div id="cctv">
                     <!-- <img id="cctvImg" src="{{ url_for('stream_video') }}" width="100%"> -->
+                    <video src="/static/video/detect/h264_v01.mp4" type="video/mp4" width="500"
+                        height="300" autoplay muted></video>
                 </div>
                 <div id="map">
                     <canvas id="mapCanvas" style="border: 2px solid black">
