--- a/app/templates/live.html
+++ b/app/templates/live.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div id="cctv">
-                    <video src="/static/video/detect/h264_v01.mp4" type="video/mp4" width="500" height="300" autoplay
+                    <video src="/static/video/detect/h264_v01.mp4" type="video/mp4" width="480" height="320" autoplay playsinline
                         muted></video>
                 </div>
                 
