--- a/app/templates/perfect.html
+++ b/app/templates/perfect.html
@@ -1,69 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <link rel="apple-touch-icon" sizes="180x180"
-            href="{{ url_for('static', path='/favicon_io/apple-touch-icon.png') }}">
-        <link rel="icon" type="image/png" sizes="32x32"
-            href="{{ url_for('static', path='/favicon_io/favicon-32x32.png') }}">
-        <link rel="icon" type="image/png" sizes="16x16"
-            href="{{ url_for('static', path='/favicon_io/favicon-16x16.png') }}">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
+<head>
+    <link rel="apple-touch-icon" sizes="180x180"
+        href="{{ url_for('static', path='/favicon_io/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32"
+        href="{{ url_for('static', path='/favicon_io/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16"
+        href="{{ url_for('static', path='/favicon_io/favicon-16x16.png') }}">
 
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;900&display=swap" rel="stylesheet">
 
-        <title>소카우넷</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="{{ url_for('static', path='layout.css')}}" rel="stylesheet">
-        <link href="{{ url_for('static', path='live.css')}}" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container">
-            <header id="intro">
-                <nav id="navigation">
-                    <ul>
-                        <li class="one"><a href="/graph">SoCowNet</a></li>
-                        <li class="two"><a href="/graph">한우DB</a></li>
-                        <li class="three"><a href="/live">모니터링</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <main role="main" id="main">
-                <article class="cctvContent">
-                    <div id="cctvMenu">
-                        <div id="defaultCCTV">
-                            <label id="cctvLabel">
-                                <input type="checkbox" id="checkVisible" onchange="changeVisible()" style="display: none;">
-                                <p id="defaultText">퍼펙트</p>
-                                <img id="arrow"
-                                    src="{{ url_for('static', path='/img/outline_expand_more_white_24dp.png') }}">
-                            </label>
-                        </div>
-                        <div id="cctvListFrame">
-                            <ul id="cctvList">
-                                <li id="cctv1">
-                                    <label><a href="/live">1번 CCTV</a></label>
-                                </li>
-                                <li id="cctv2">
-                                    <label><a href="/performance">퍼포먼스</a></label>
-                                </li>
-                                <li id="cctv3">
-                                    <label><a href="/perfect">퍼펙트</a></label>
-                                </li>
-                            </ul>
-                        </div>
+    <title>소카우넷</title>
+
+    <link href="{{ url_for('static', path='layout.css')}}" rel="stylesheet">
+    <link href="{{ url_for('static', path='live.css')}}" rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <header id="intro">
+            <nav id="navigation">
+                <ul>
+                    <li class="one"><a href="/graph">SoCowNet</a></li>
+                    <li class="two"><a href="/graph">한우DB</a></li>
+                    <li class="three"><a href="/live">모니터링</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main role="main" id="main">
+            <article class="cctvContent">
+                <div id="cctvMenu">
+                    <div id="defaultCCTV">
+                        <label id="cctvLabel">
+                            <input type="checkbox" id="checkVisible" onchange="changeVisible()" style="display: none;">
+                            <p id="defaultText">퍼펙트</p>
+                            <img id="arrow"
+                                src="{{ url_for('static', path='/img/outline_expand_more_white_24dp.png') }}">
+                        </label>
                     </div>
-                    <div id="cctvVideo">
-                        <video src="{{ url_for('static', path='/video/detect/h264_v01.mp4') }}" type="video/mp4" width="320" height="240" autoplay playsinline muted></video>
+                    <div id="cctvListFrame">
+                        <ul id="cctvList">
+                            <li id="cctv1"><label><a href="/live">1번 CCTV</a></label></li>
+                            <li id="cctv2"><label><a href="/performance">퍼포먼스</a></label></li>
+                            <li id="cctv3"><label><a href="/perfect">퍼펙트</a></label></li>
+                        </ul>
                     </div>
-                </article>
-            </main>
-            <footer></footer>
-        </div>
-    </body>
-<script src="{{ url_for('static', path='live.js')}}"></script>
+                </div>
+                <div id="youtubevideo">
+                    <iframe width="320" height="240" src="https://www.youtube.com/embed/ZT2w8-bgt4A?mute=1&autoplay=1"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen playsinline></iframe>
+                </div>
+            </article>
+        </main>
+        <footer></footer>
+    </div>
+</body>
+<script>
+    function changeVisible() {
+        let style = document.getElementById('cctvListFrame')
+        // console.log(window.getComputedStyle(style).display)
+        // console.log(confirmVisible)
+        if (window.getComputedStyle(style).display == 'none') {
+            document.getElementById('cctvListFrame').setAttribute('style', 'display: block;')
+        } else {
+            document.getElementById('cctvListFrame').setAttribute('style', 'display: none;')
+        }
+    }
+
+    document.querySelector("body").addEventListener("click", function (e) {
+        // console.log(e.target.id)
+        // console.log(forCheck)
+        if (e.target.id == e.currentTarget.querySelector("#checkVisible").id) {
+        } else {
+            // console.log("wrong")
+            document.getElementById('cctvListFrame').style.display = 'none';
+            document.getElementById('checkVisible').checked = false
+        }
+    })
+</script>
+
 </html>
